--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         
         <! - page header / headings ->
         <section id="header">
-    <div class="text-center">
-      <h1>Tom Gonzales home training <br> I'll get you in shape!</h1>
+    <div class="text-center ">
+      <h1 class="font-serif">Tom Gonzales home training <br> I'll get you in shape!</h1>
       <h2>Muscle building • Functional training • Nutritional advice</h2>
     </div>
         </section>
